@@ -1,17 +1,32 @@
-CONFIG_CONSOLE_DIRECT=y
-CONFIG_CONSOLE_BIOS=n
-CONFIG_CONSOLE_SERIAL=n
-CONFIG_DCON_VT52=y
-CONFIG_DCON_ANSI=y
-CONFIG_DCON_ANSI_PRINTK=n
-CONFIG_DEFAULT_KEYMAP=y
-CONFIG_BIOS_VT52=y
 CONFIG_XT=n
 CONFIG_MODULE=n
 CONFIG_COMPAQ_FAST=n
+
+CONFIG_286PMODE=n
+CONFIG_386RAM=n
+
+CONFIG_STRACE=n
+CONFIG_OPT_SMALL=n
+
+CONFIG_CONSOLE_DIRECT=y
+CONFIG_DCON_VT52=y
+CONFIG_DCON_ANSI=y
+CONFIG_DCON_ANSI_PRINTK=n
+CONFIG_CONSOLE_BIOS=n
+CONFIG_BIOS_VT52=y
+CONFIG_CONSOLE_SERIAL=n
+CONFIG_DEFAULT_KEYMAP=y
 CONFIG_CHAR_DEV_MEM=y
 CONFIG_CHAR_DEV_RS=y
 CONFIG_CHAR_DEV_LP=y
+
+CONFIG_BLK_DEV_FD=n
+CONFIG_BLK_DEV_HD=n
+CONFIG_BLK_DEV_BIOS=y
+CONFIG_BLK_DEV_BHD=y
+CONFIG_BLK_DEV_BFD=y
+CONFIG_BLK_DEV_RAM=n
+CONFIG_BLK_DEV_XD=n
 
 CONFIG_MINIX_FS=y
 CONFIG_ROMFS_FS=n
@@ -28,16 +43,3 @@ CONFIG_INET=y
 CONFIG_SOCK_CLIENTONLY=y
 CONFIG_SOCK_STREAMONLY=y
 
-CONFIG_BLK_DEV_FD=n
-CONFIG_BLK_DEV_HD=n
-CONFIG_BLK_DEV_BIOS=y
-CONFIG_BLK_DEV_BHD=y
-CONFIG_BLK_DEV_BFD=y
-
-CONFIG_BLK_DEV_RAM=n
-CONFIG_BLK_DEV_XD=n
-
-CONFIG_286PMODE=n
-
-CONFIG_STRACE=n
-CONFIG_OPT_SMALL=n
