@@ -1,0 +1,41 @@
+#
+# CHaracter device driver configuration
+#
+
+mainmenu_option next_comment
+comment 'Character device drivers'
+
+comment 'Select a console driver'
+bool 'Direct console writes' CONFIG_CONSOLE_DIRECT
+if [ "$CONFIG_CONSOLE_DIRECT" = "y" ]; then
+	bool 'Direct console VT52 emulation' CONFIG_DCON_VT52
+	if [ "$CONFIG_DCON_VT52" = "y" ]; then
+		bool 'Direct console ANSI emulation' CONFIG_DCON_ANSI
+		if [ "$CONFIG_DCON_ANSI" = "y" ]; then
+			bool 'ANSI Colourized printk' CONFIG_DCON_ANSI_PRINTK
+		fi
+	fi
+	choice 'XT Keyboard support' \
+		"be 	CONFIG_BE_KEYMAP\
+		 fr	CONFIG_FR_KEYMAP\
+		 uk 	CONFIG_UK_KEYMAP\
+		 es 	CONFIG_ES_KEYMAP\
+		 de	CONFIG_DE_KEYMAP\
+		 usa    CONFIG_DEFAULT_KEYMAP" usa
+fi
+bool 'BIOS console writes' CONFIG_CONSOLE_BIOS
+if [ "$CONFIG_CONSOLE_BIOS" = "y" ]; then
+	bool 'BIOS console VT52 emulation' CONFIG_BIOS_VT52
+fi
+bool 'Serial console writes' CONFIG_CONSOLE_SERIAL
+if [ "$CONFIG_CONSOLE_SERIAL" = "y" ]; then
+	define_bool CONFIG_CHAR_DEV_RS y
+fi
+comment 'Other character devices'
+bool 'Memory character devices /dev/zero /dev/null etc.' CONFIG_CHAR_DEV_MEM
+if [ "$CONFIG_CONSOLE_SERIAL" = "n" ]; then
+	bool 'Serial device driver' CONFIG_CHAR_DEV_RS
+fi
+bool 'Parallel device driver' CONFIG_CHAR_DEV_LP
+
+endmenu
