@@ -7,11 +7,11 @@ comment 'Networking'
 bool 'Socket support' CONFIG_SOCKET
 
 if [ "$CONFIG_SOCKET" = "y" ]; then
-	bool 'UNIX sockets' CONFIG_UNIX
-	bool 'INET sockets (TCP/IP)' CONFIG_INET
-	comment 'Advance socket options'
-	bool 'Only include support for client sockets (MUST)' CONFIG_SOCK_CLIENTONLY
-	bool 'Only include support for STREAM type sockets (MUST)' CONFIG_SOCK_STREAMONLY
+	bool '  UNIX sockets' CONFIG_UNIX
+	bool '  INET sockets (TCP/IP)' CONFIG_INET
+	comment '  Advance socket options'
+	bool '  Only include support for client sockets (MUST)' CONFIG_SOCK_CLIENTONLY
+	bool '  Only include support for STREAM type sockets (MUST)' CONFIG_SOCK_STREAMONLY
 fi
 
 endmenu
